fix slider home on mobile size, add new content side events

--- a/public/css/f/theme.css
+++ b/public/css/f/theme.css
@@ -3679,7 +3679,7 @@ img {
     bottom: 0;
   }
   .cover.fullscreen {
-    height: auto;
+    height: 50vh;
     padding: 80px 0;
   }
   .cover.fullscreen.image-slider {
@@ -3691,7 +3691,7 @@ img {
     -webkit-transform: none;
   }
   .cover.fullscreen .slides li {
-    height: auto;
+    height: 50vh;
     padding: 80px 0;
   }
 }
